# rs_pg_pubsub

./: .env.example  .gitignore  Cargo.toml  Readme.md  docker-compose.yml
src/: db.rs  main.rs  model.rs  publish.rs  subscribe.rs
