[package]
name = "rs_pg_pubsub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
fake = { version = "2.8", features = ["derive", "dummy"] }
postgres = "0.19.7"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17.7"
