[package]
name = "rs_pg_pubsub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
fake = { version = "2.8", features = ["derive", "dummy"] }
postgres = { version = "0.19.7", features = ["with-chrono-0_4", "with-time-0_3"] }
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17.7"
chrono = "0.4.31"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
lazy_static = "1.4.0"
tokio = { version = "1.35.1", features = ["full"]}
futures = "0.3.30"
tokio-postgres = "0.7.10"
